--- a/package.json
+++ b/package.json
@@ -18,8 +18,14 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@paralleldrive/cuid2": "^2.2.1",
+    "bootstrap": "^5.2.3",
+    "font-awesome": "^4.7.0",
+    "ngx-bootstrap": "^11.0.2",
+    "ngx-spinner": "^16.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "xng-breadcrumb": "^10.0.0",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
