--- a/angular.json
+++ b/angular.json
@@ -37,7 +37,9 @@
               "node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
               "node_modules/font-awesome/css/font-awesome.min.css",
               "node_modules/ngx-spinner/animations/ball-newton-cradle.css",
-              "src/styles.scss"
+
+              "src/styles.scss",
+              "node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": []
           },
